include static and templates in setup build
